Fixed out of place login / register links.

--- a/SurrealTravelWeb/src/main/webapp/style.css
+++ b/SurrealTravelWeb/src/main/webapp/style.css
@@ -87,6 +87,7 @@ div.navigation ul li {float: left; margin: 0 30px 0 0;}
 div.navigation ul li a {font-size: 14px; text-decoration: none; color: #000000; padding: 15px; display: block;}
 div.navigation ul li a:hover {color: #cae2f5; background: #4e88b7; transition: 0.2s; -moz-transition: 0.2s; -webkit-transition: 0.2s; -o-transition: 0.2s;}
 div.navigation .login {float: right; padding: 8px 13px 0 0; font-size: 14px; position: relative;}
+div.navigation .login .p {padding: 7px 2px 0 0}
 div.navigation .userLabel {font-weight: bold; float: left; padding: 7px 0;}
 div.navigation .username {float: left; padding: 7px 25px 2px 10px; cursor: pointer; background: url('image/dropdown.png') no-repeat; background-position: right 9px top 13px;}
 div.navigation .username:hover {background-color: #cccccc}
